# libblast

./: .gitmodules  CMakeLists.txt  License.md  Makefile  ReadMe.md
lib/: CMakeLists.txt
tests/: CMakeLists.txt  ReadMe.md  tests.cpp
